new images & image sizes

--- a/css/style.css
+++ b/css/style.css
@@ -81,10 +81,13 @@ h1:first-line {
 }
 
 .slot-wrapper {
-	border: 1px solid #000000;
-	background: #fff;
-	-webkit-box-shadow: 3px 3px 3px 0px rgba(0, 0, 0, 0.25);
+	width:258px;
+	margin:0 auto;
+	border: 1px solid #000;
+	background: #ccc url("../images/slot-wrapper-bg.png") no-repeat center center;
+		-webkit-box-shadow: 3px 3px 3px 0px rgba(0, 0, 0, 0.25);
 	box-shadow: 3px 3px 3px 0px rgba(0, 0, 0, 0.25);
+	border-radius: 4px;
 	margin-bottom: 5px;
 }
 
@@ -92,9 +95,9 @@ h1:first-line {
 	background: url("../images/reel_normal.png") repeat-y;
 	/*Taken from http://www.swish-designs.co.uk*/
 	width: 86px;
-	height: 70px;
+	height: 90px;
 	float: left;
-	border: 1px solid #000;
+/*	border: 1px solid #000;*/
 	background-position: 0 4px;
 }
 
@@ -148,6 +151,7 @@ button:active {
 	height: 22px;
 	background: #fff;
 	border: 1px solid #999;
+	border-radius:10px;
 }
 
 #result .win {
