--- a/css/style.css
+++ b/css/style.css
@@ -36,9 +36,12 @@
 
 html {
 	height: 100%;
+	background:#404040;
+/*
 	background: #f5f6f6;
 	background: linear-gradient(135deg, #f5f6f6 0%, #dbdce2 21%, #b8bac6 49%, #dddfe3 80%, #f5f6f6 100%);
 	filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#f5f6f6', endColorstr='#f5f6f6', GradientType=1);
+*/
 }
 
 body {
