--- a/css/style.css
+++ b/css/style.css
@@ -20,12 +20,11 @@
      Kapitel
    ==================================== */
 
+/* ~~~ Unterabschnitt */
 
-/*     -- Abschnitt
+/*     -- Allgemeines
 ------------------------------------------------- */
 
-
-/* ~~~ Unterabschnitt */
 
 *:focus {
 	/* verhindert den blauen Schatten */
@@ -36,45 +35,143 @@
 
 html {
 	height: 100%;
-	background:#404040;
-/*
-	background: #f5f6f6;
-	background: linear-gradient(135deg, #f5f6f6 0%, #dbdce2 21%, #b8bac6 49%, #dddfe3 80%, #f5f6f6 100%);
-	filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#f5f6f6', endColorstr='#f5f6f6', GradientType=1);
-*/
+	background: #404040;
 }
 
 body {
 	font-family: Helvetica, Arial, sans-serif;
-	padding: 20px;
-}
-
-h1 {
-	margin: 10px 0 40px 20px;
-	text-shadow: 0 1px 0 #ccc, 0 2px 0 #c9c9c9, 0 3px 0 #bbb, 0 4px 0 #b9b9b9, 0 5px 0 #aaa, 0 6px 1px rgba(0, 0, 0, .1), 0 0 5px rgba(0, 0, 0, .1), 0 1px 3px rgba(0, 0, 0, .3), 0 3px 5px rgba(0, 0, 0, .2), 0 5px 10px rgba(0, 0, 0, .25), 0 10px 10px rgba(0, 0, 0, .2), 0 20px 20px rgba(0, 0, 0, .15);
-	font: normal 40px/1.1 "Helvetica Neue", Helvetica, Arial, sans-serif;
-	color: #fff;
-}
-
-h1:first-line {
-	font-size: 75%;
 }
 
 
+
+
+
+/*     -- Las Vegas Sign
+------------------------------------------------- */
+
+.sign {
+	position: absolute;
+	top: 130px;
+	left: 50%;
+	-webkit-transform: translate(-50%, -50%) rotate(-45deg) skew(20deg, 20deg);
+	transform: translate(-50%, -50%) rotate(-45deg) skew(20deg, 20deg);
+	width: 250px;
+	height: 250px;
+	background: #EAE7DF;
+	-webkit-box-shadow: inset 0 0 0 10px #ffCB3A;
+	box-shadow: inset 0 0 0 10px #ffCB3A;
+	border: 5px dotted #E6D1b2;
+	border-top-left-radius: 50px;
+	border-bottom-right-radius: 50px;
+}
+.text {
+	position: absolute;
+	top: 125px;
+	left: 50%;
+	-webkit-transform: translate(-50%, -50%);
+	transform: translate(-50%, -50%);
+	text-align: center;
+	white-space: nowrap;
+	font-family: Helvetica, sans-serif;
+	color: #0261DF;
+}
+.welcome {
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	margin-left: 17px;
+}
+.welcome span {
+	display: inline-block;
+	width: 22px;
+	height: 20px;
+	padding: 10px;
+	font-size: 20px;
+	font-weight: bold;
+	color: #FF020D;
+	background: #EAE7DF;
+	border: 1px solid #DEC08C;
+	border-radius: 50%;
+	-webkit-box-shadow: 0px 5px 5px #5D646E;
+	box-shadow: 0px 5px 5px #5D646E;
+}
+.text .to {
+	position: relative;
+	top: 15px;
+	left: -115px;
+	font-family: 'Open Sans';
+	font-size: 15px;
+	line-height:15px;
+	font-weight: 400;
+}
+.text .fab {
+	position: relative;
+	top: -23px;
+	left: 15px;
+	font-family: 'Mr Dafoe';
+	font-size: 54px;
+	line-height: 40px;
+	letter-spacing: 5px;
+}
+.text .las {
+	position: relative;
+	top: -28px;
+	left: 8px;
+	font-size: 50px;
+	font-weight: 600;
+	letter-spacing: 3px;
+	color: red;
+}
+.text .nv {
+	position: relative;
+	top: -28px;
+	left: 0;
+	font-size: 22px;
+	font-weight: 600;
+	letter-spacing: 5px;
+}
+
+
+/*     -- Slotmachine
+------------------------------------------------- */
+
+main {
+	margin-top:260px;
+}
+
+
+/* ~~~ Hintergrundbild */
+main:before {
+	content: "";
+	position: fixed;
+	left: 0;
+	right: 0;
+	margin-top:-260px;
+	height: 100vh;
+	width: 100vw;
+	z-index: -1;
+	background: url("../images/LasVegas-1.jpg") no-repeat top left;
+	background-size: cover;
+	-webkit-filter: blur(7px);
+	-moz-filter: blur(7px);
+	-o-filter: blur(7px);
+	-ms-filter: blur(7px);
+	filter: blur(7px);
+}
 
 .container {
 	position:relative;
 	margin: 0 auto;
-	width: 432px;
-	min-height:213px;
-	background: url("../images/slotmachine-bg.png") no-repeat center center;
+	width: 462px;
+	min-height:226px;
+	background: url("../images/slotmachine-bg.svg") no-repeat center center;
 }
 
 .slot-wrapper {
 	position:relative;
 /*	width:312px;*/
-	top:83px;
-	left:46px;
+	top:96px;
+	left:76px;
 /*	background: #ff0;*/
 }
 
@@ -102,8 +199,9 @@ button {
 	border-radius: 100%;
 	margin: 10px auto;
 	margin-bottom: 20px;
+	font-family: 'Mr Dafoe';
 	color: red;
-	font-size: 28px;
+	font-size: 45px;
 	text-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.75);
 	cursor: pointer;
 	border: 2px solid #333;
@@ -133,13 +231,17 @@ button:active {
 }
 
 #result {
-	margin-top: 10px;
-	padding: 10px 0 20px 0;
-	font-size: 24px;
+	width:360px;
+	height:40px;
+	margin: 0px auto;
+	padding: 0 0 10px 0;
+	font-family: 'Mr Dafoe';
+	text-align:center;
+	font-size: 36px;
 	font-weight: bold;
-	height: 22px;
-	background: #fff;
-	border: 1px solid #999;
+	text-shadow: 3px 3px 3px rgb(68, 40, 24);
+	background: url("../images/result-bg.svg") repeat;
+	border: 3px solid rgb(68, 40, 24);
 	border-radius:10px;
 }
 
