--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,7 @@ body {
 	transform: translate(-50%, -50%) rotate(-45deg) skew(20deg, 20deg);
 	width: 250px;
 	height: 250px;
-	background: #EAE7DF;
+	background: #efefef;
 	-webkit-box-shadow: inset 0 0 0 10px #ffCB3A;
 	box-shadow: inset 0 0 0 10px #ffCB3A;
 	border: 5px dotted #E6D1b2;
@@ -202,7 +202,7 @@ button {
 	font-family: 'Mr Dafoe';
 	color: red;
 	font-size: 45px;
-	text-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.75);
+	text-shadow: 3px 3px 3px rgb(68, 40, 24);
 	cursor: pointer;
 	border: 2px solid #333;
 	background: #fefcea;
@@ -215,7 +215,9 @@ button {
 }
 
 button:disabled {
-	color: #aaa;
+	color: #ccc;
+	text-shadow:none;
+	cursor:default;
 	-webkit-transition: all 0.25s ease;
 	transition: all 0.25s ease;
 }
