--- a/css/style.css
+++ b/css/style.css
@@ -17,13 +17,9 @@
 
 
 /* ====================================
-     Kapitel
+     Allgemeines
    ==================================== */
 
-/* ~~~ Unterabschnitt */
-
-/*     -- Allgemeines
-------------------------------------------------- */
 
 
 *:focus {
@@ -44,10 +40,10 @@ body {
 
 
 
+/* ====================================
+     Las Vegas Sign
+   ==================================== */
 
-
-/*     -- Las Vegas Sign
-------------------------------------------------- */
 
 .sign {
 	position: absolute;
@@ -134,8 +130,10 @@ body {
 }
 
 
-/*     -- Slotmachine
-------------------------------------------------- */
+/* ====================================
+     Slotmachine
+   ==================================== */
+
 
 main {
 	margin-top:260px;
@@ -245,7 +243,11 @@ main:before {
 }
 
 
-/* ~~~ Strat, Stopp, Reset-Knopf */
+/* ====================================
+     Buttons
+   ==================================== */
+
+/* ~~~ Start, Stopp, Reset-Knopf */
 button {
 	display: block;
 	width: 150px;
@@ -288,6 +290,9 @@ button:active {
 
 
 
+/* ====================================
+     Diverses
+   ==================================== */
 
 /* ~~~ Credits für Autor */
 .credits {
