--- a/css/style.css
+++ b/css/style.css
@@ -341,6 +341,14 @@ footer {
 	box-shadow: 0 -2px 0px rgba(220, 175, 20, 0.5);
 }
 
+footer .author {
+	padding-right:10px;
+}
+
+footer .tut {
+	padding-left:10px;
+}
+
 
 /* ====================================
      Verloren Seite
